--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icon/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NextScraper</title>
+    <title>React/Next.js Scraper</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="w-full h-full"></div>
     <script type="module" src="/src/popup/index.jsx"></script>
   </body>
 </html>
