--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,7 @@
     <title>React/Next.js Scraper</title>
   </head>
   <body>
-    <div id="app" class="w-full h-full"></div>
+    <div id="app" class="w-full h-full flex flex-col"></div>
     <script type="module" src="/src/popup/index.jsx"></script>
   </body>
 </html>
