Ready for v1.0.0 release, added Privacy Policy & Readme

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app" class="w-full h-full flex flex-col"></div>
-    <script type="module" src="/src/popup/index.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
