--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/icon/logo.ico" />
+    <link rel="icon" href="/img/icon48.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React/Next.js Scraper</title>
+    <title>NextScraper</title>
   </head>
   <body>
     <div id="app" class="w-full h-full flex flex-col"></div>
